<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lemus.vhrecorder.DetailsActivity">

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:hint="@string/nameField"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:text="@string/environment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEnvironment"
        android:hint="@string/environmentField"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etEnvironment"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:id="@+id/rbGroup"
        android:checkedButton="@+id/rbMan">

        <RadioButton
            android:text="@string/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbMan"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWoman"
            android:layout_weight="1" />
    </RadioGroup>

    <Button
        android:text="@string/begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btBegin"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:onClick="beginRecord" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup"
        android:id="@+id/radioGroup"
        android:checkedButton="@+id/rb8pcm">

        <RadioButton
            android:text="@string/pcm8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb8pcm"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/pcm16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb16pcm"
            android:layout_weight="1" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/radioGroup"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/rbGroup"
        android:checkedButton="@+id/rb8000">

        <RadioButton
            android:text="@string/fs8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb8000"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/fs11025"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb11025"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/fs22050"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb22050"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/fs44100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb44100"
            android:layout_weight="1" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>
